<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/edit_text"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="56sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_One"
            android:textSize="17sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ans_1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ans_2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ans_3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ans_4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q2_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_Two"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/q2_tbans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_textbox"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="@string/ans_Q21" />

            <CheckBox
                android:id="@+id/q2_tbans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_textbox"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/q2_tbans1"
                android:padding="6dp"
                android:text="@string/ans_Q22" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_textbox"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/q2_tbans2"
                android:padding="6dp"
                android:text="@string/ans_Q23" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_tbans1"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="@string/ans_Q24" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/question_Three"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:hint="@string/hint2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/question_Four"
            android:textSize="17sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ansQ41" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ansQ42" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ansQ43" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ansQ44" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/q5textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_Five"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/q5_tbans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q5textbox"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="@string/ansQ51" />

            <CheckBox
                android:id="@+id/q5_tbans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q5textbox"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/q5_tbans1"
                android:padding="6dp"
                android:text="@string/ansQ52" />

            <CheckBox
                android:id="@+id/q5tbans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q5_tbans1"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="@string/ansQ53" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q5tbans3"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="@string/ansQ54" />
        </RelativeLayout>

        <Button
            android:id="@+id/submit_quizscore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Submit" />
    </LinearLayout>
</ScrollView>
